added in golang swagger api docs
