# swagger.yml
@@ -1,4 +1,13 @@
-basePath: /v1
+swagger: '2.0'
+basePath: /
+host: 0.0.0.0
+info:
+    title: Automate API
+    version: 0.0.1
+    description:
+        This is a simple todo list API
+        illustrating go-swagger codegen
+        capabilities.
 consumes:
     - application/json
 definitions:
@@ -172,9 +181,6 @@ definitions:
                 x-go-name: Services
         type: object
         x-go-package: Automate-Go-Backend/models
-info:
-    description: 'Title: AutoMate API'
-    version: 0.0.1
 paths:
     /GetUser:
         get:
@@ -185,20 +191,35 @@ paths:
             summary: Get a user.
             tags:
                 - user
+            responses: 
+                '200':
+                    description: OK
+                    schema:
+                        type: string
     /changePassword:
         post:
             description: This endpoint returns a confirmation message.
-            operationId: user
+            operationId: changePassword
             produces:
                 - application/json
             summary: changePassword endpoint
+            responses: 
+                '200':
+                    description: OK
+                    schema:
+                        type: string
     /deleteUser:
         post:
             description: This endpoint returns a confirmation message.
-            operationId: user
+            operationId: deleteUser
             produces:
                 - application/json
             summary: delete User endpoint
+            responses: 
+                '200':
+                    description: OK
+                    schema:
+                        type: string
     /login:
         post:
             description: This endpoint returns a confirmation message.
@@ -208,6 +229,11 @@ paths:
             summary: Login in endpoint
             tags:
                 - user
+            responses: 
+                '200':
+                    description: OK
+                    schema:
+                        type: string
     /signUp:
         post:
             description: This endpoint returns a confirmation message.
@@ -217,29 +243,33 @@ paths:
             summary: Sign up endpoint
             tags:
                 - user
+            responses: 
+                '200':
+                    description: OK
+                    schema:
+                        type: string
     /updateUser:
         post:
             description: This endpoint returns a confirmation message.
-            operationId: user
+            operationId: updateUser
             produces:
                 - application/json
             summary: update User endpoint
+            responses: 
+                '200':
+                    description: OK
+                    schema:
+                        type: string
 produces:
     - application/json
 securityDefinitions:
-    api_key:
-        in: header
-        name: KEY
-        type: apiKey
     oauth2:
         authorizationUrl: /oauth2/auth
         flow: accessCode
-        in: header
         scopes:
             bar: foo
         tokenUrl: /oauth2/token
         type: oauth2
-swagger: "2.0"
 x-meta-array:
     - value1
     - value2
